<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/drawer_group_subscriptions">
        <item android:id="@+id/sub_setting" android:icon="@drawable/ic_subscriptions_24dp" android:title="@string/title_sub_setting" />
    </group>
    <group android:id="@+id/drawer_group_apps">
        <item android:id="@+id/per_app_proxy_settings" android:icon="@drawable/ic_per_apps_24dp" android:title="@string/per_app_proxy_settings" />
    </group>
    <group android:id="@+id/drawer_group_routing">
        <item android:id="@+id/routing_setting" android:icon="@drawable/ic_routing_24dp" android:title="@string/routing_settings_title" />
    </group>
    <group android:id="@+id/drawer_group_assets">
        <item android:id="@+id/user_asset_setting" android:icon="@drawable/ic_file_24dp" android:title="@string/title_user_asset_setting" />
    </group>
    <group android:id="@+id/drawer_group_settings">
        <item android:id="@+id/settings" android:icon="@drawable/ic_settings_24dp" android:title="@string/title_settings" />
    </group>
    <group android:id="@+id/drawer_group_instagram">
        <item android:id="@+id/promotion" android:icon="@drawable/ic_promotion_24dp" android:title="@string/v2box_instagram" />
    </group>
    <group android:id="@+id/drawer_group_backup">
        <item android:id="@+id/backup_restore" android:icon="@drawable/ic_restore_24dp" android:title="@string/title_configuration_backup_restore" />
    </group>
    <group android:id="@+id/drawer_group_clear">
        <item android:id="@+id/clear_app" android:icon="@drawable/ic_delete_24dp" android:title="@string/v2box_clear_app" />
    </group>
    <group android:id="@+id/drawer_group_about">
        <item android:id="@+id/about" android:icon="@drawable/ic_about_24dp" android:title="@string/title_about" />
    </group>
</menu>
